2004-06-14 David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWElementIDString.m
        added setString: (original code from Philip Moetteli, 
        debugged with David Ayers)
        tested on MacOSX with Apple Foundation
        * GSWeb.framework/GSWMessage.m
        in appendContentString: append string only if not nil 
        (patch from Philip Moetteli)

2004-06-01 David Wetzel <dave@turbocat.de>

	* GSWeb.framework/GSWDeclarationParser.m:
	supports 'true' and 'false' now. Will be transformed into YES and NO

2004-05-18  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWUtils.h/m: (struct proc_s, proc_t): Removed.
	(pidstat, pidstatm, pidproccontent): Removed.
	* GSWeb.framework/GSWStatisticsStore.m
	([GSWStatisticsStore _memoryUsage]): Remove usage of pidstat and
	pidstatm.

	* GSWeb.framework/GSWProcFS.h/m: Make class more portable.
	Replace all system dependent types with standard types.  Replace
	usage of NSDebugFLog with NSDebugMLog in methods.
	([GSWProcFSProcInfo filledProcInfo]): Use -processIdentifier
	instead of getpid.
	([GSWProcFSProcInfo filledProcInfoWithPID:]): Update types. Use
	standard GC macro.
	([GSWProcFSProcInfo initFilledWithPID:]): Update types.
	([GSWProcFSProcInfo description]): Use NSPageSize instead of
	getpagesize.  Remove obsolete casts.
	([GSWProcFSProcInfo contentOfProcFile:]): Use standard NSString
	API to read the file.
	([GSWProcFSProcInfo contentOfPIDFile:]): Adapt to new types and
	reformat.
	([GSWProcFSProcInfo residentMemory]),
	([GSWProcFSProcInfo sharedMemory]): Adapt to new types.
	
2004-05-16  David Wetzel <dave@turbocat.de>

	* GSWeb.framework/GSWApplication.m ([GSWApplication
	lockedInitComponentBearingFrameworksFromBundleArray:]):
	Commented support for hasGSWComponents optimization.
	
2004-05-16  David Ayers  <d.ayers@inode.at>
	    Matt Rice  <ratmice@yahoo.com>

	* config.mak.in: Replace LIBWRAP with AUX_LIBS so that they will
	be included in gsweb.make makefile fragment.